--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,9 +12,9 @@
 
     <!-- TODO 이거 주석풀면 왜 톰켓 에러? -->
     <!-- Creates the Spring Container shared by all Servlets and Filters -->
-<!--    <listener>-->
-<!--        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
-<!--    </listener>-->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
 <!--     Processes application requests-->
     <servlet>
